chore: rename dirs

--- a/schedule-service/package.json
+++ b/schedule-service/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mapped-types": "^2.0.6",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.1.1",
+    "@nestjs/swagger": "^8.0.7",
     "@nestjs/typeorm": "^10.0.2",
     "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
