--- a/schedule-service/.env
+++ b/schedule-service/.env
@@ -1,6 +1,7 @@
+DB_HOST=192.168.7.102
 DB_PORT=5432
 DB_USERNAME=vtlr
 DB_PASSWORD=qwer1234
 DB_DATABASE=vtlr_db
 
-LAMBDA_FUNCTION_NAME=MyLambdaFunction
+CHROMECAST_SERVICE_HOST=192.168.7.103:4001
