--- a/schedule-service/.env.sample
+++ b/schedule-service/.env.sample
@@ -1,6 +1,7 @@
+DB_HOST=192.168.x.x
 DB_PORT=5432
-DB_USERNAME=db_user
-DB_PASSWORD=qwer1234
+DB_USERNAME=vtlr
+DB_PASSWORD=xxxx
 DB_DATABASE=vtlr_db
 
-LAMBDA_FUNCTION_NAME=lambda_func
+CHROMECAST_SERVICE_HOST=...
