--- a/chromecast-service/Dockerfile
+++ b/chromecast-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9-slim
+FROM python:3.10-slim
 
 WORKDIR /app
 
@@ -10,5 +10,8 @@ COPY . .
 
 ENV FLASK_APP=app.py
 ENV FLASK_RUN_HOST=0.0.0.0
+ENV FLASK_RUN_PORT=4001
+
+EXPOSE 4001
 
 CMD ["flask", "run"]
