--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,19 @@
-FROM node:20-alpine
-
+FROM node:20-alpine AS builder
 WORKDIR /app
-
-COPY package.json package-lock.json ./
-
-RUN npm install --production
-
+COPY package*.json ./
+RUN npm ci
 COPY . .
 
 RUN npm run build
 
+FROM node:20-alpine AS runner
+WORKDIR /app
+ENV NODE_ENV production
+COPY --from=builder /app/next.config.ts ./
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/.next/static ./.next/static
+
 EXPOSE 3000
 
-CMD ["npm", "start"]
-
+CMD ["node", "server.js"]
