feat: handle jobs at same time

--- a/schedule-service/.env
+++ b/schedule-service/.env
@@ -1,7 +1,10 @@
-DB_HOST=192.168.7.102
+DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USERNAME=vtlr
 DB_PASSWORD=qwer1234
 DB_DATABASE=vtlr_db
 
-CHROMECAST_SERVICE_HOST=192.168.7.103:4001
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+
+CHROMECAST_SERVICE_HOST=127.0.0.1:4001
