--- a/schedule-service/package.json
+++ b/schedule-service/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@aws-sdk/client-lambda": "^3.699.0",
     "@nestjs/axios": "^3.1.2",
+    "@nestjs/bullmq": "^10.2.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -33,6 +34,7 @@
     "@types/uuid": "^10.0.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
+    "bullmq": "^5.34.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cron-parser": "^4.9.0",
