chromecast device api 추가

--- a/chromecast-service/.env.sample
+++ b/chromecast-service/.env.sample
@@ -8,7 +8,9 @@ STORAGE_ACCESS_KEY=
 STORAGE_SECRET_KEY=
 
 DATABASE_HOST=127.0.0.1
-DATABSE_PORT=5432
+DATABASE_PORT=5432
+DATABASE_USER=
+DATABASE_PASSWORD=
 
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
