feat: add tts service to scheduler

--- a/schedule-service/.env
+++ b/schedule-service/.env
@@ -7,4 +7,5 @@ DB_DATABASE=vtlr_db
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 
-CHROMECAST_SERVICE_HOST=127.0.0.1:4001
+CHROMECAST_SERVICE_HOST=http://127.0.0.1:4001
+TTS_SERVICE_HOST=http://127.0.0.1:4002
