--- a/schedule-service/package.json
+++ b/schedule-service/package.json
@@ -41,6 +41,7 @@
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "swagger-themes": "^1.4.3",
     "typeorm": "^0.3.20",
     "uuid": "^11.0.3"
   },
