worker 서비스에 로직 추가

--- a/worker-service/Dockerfile
+++ b/worker-service/Dockerfile
@@ -4,7 +4,13 @@ WORKDIR /worker
 
 COPY requirements.txt .
 
+RUN apt-get update && apt-get install -y \
+    libgomp1 \
+    && rm -rf /var/lib/apt/lists/*
+
 RUN pip install --no-cache-dir -r requirements.txt
+
+RUN python -m unidic download
 
 COPY . /worker
 
