--- a/tts-service/Dockerfile
+++ b/tts-service/Dockerfile
@@ -4,6 +4,10 @@ WORKDIR /app
 
 COPY requirements.txt .
 
+RUN apt-get update && apt-get install -y \
+    libgomp1 \
+    && rm -rf /var/lib/apt/lists/*
+
 RUN pip install --no-cache-dir -r requirements.txt
 RUN python -m unidic download
 
