--- a/tts-service/Dockerfile
+++ b/tts-service/Dockerfile
@@ -5,11 +5,11 @@ WORKDIR /app
 COPY requirements.txt .
 
 RUN apt-get update && apt-get install -y \
-    libgomp1 \
+    libgomp1 sox ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pip install --no-cache-dir -r requirements.txt
-RUN python -m unidic download
+#RUN python -m unidic download
 
 COPY . .
 
