--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "@internationalized/date": "3.6.0",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
+    "@mui/x-date-pickers": "^7.27.0",
     "@nextui-org/card": "^2.2.8",
     "@nextui-org/checkbox": "^2.3.7",
     "@nextui-org/date-picker": "^2.3.8",
     "@nextui-org/react": "^2.6.10",
     "cron-parser": "^4.9.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.15.0",
     "next": "15.0.3",
     "react": "^19.0.0",
