--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@heroui/card": "2.2.14",
+    "@heroui/checkbox": "2.3.14",
+    "@heroui/date-picker": "2.3.15",
+    "@heroui/number-input": "^2.0.5",
+    "@heroui/react": "2.7.4",
     "@internationalized/date": "3.6.0",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "@mui/x-date-pickers": "^7.27.0",
-    "@nextui-org/card": "^2.2.8",
-    "@nextui-org/checkbox": "^2.3.7",
-    "@nextui-org/date-picker": "^2.3.8",
-    "@nextui-org/react": "^2.6.10",
     "cron-parser": "^4.9.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.15.0",
