--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^11.15.0",
     "next": "15.0.3",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
