--- a/schedule-service/package.json
+++ b/schedule-service/package.json
@@ -38,6 +38,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cron-parser": "^4.9.0",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "ioredis": "^5.7.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
